<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/welcome_txt"
            android:textColor="#ffffff"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_to_continue_txt"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:background="@drawable/registerdesign"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerNam"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/user_name_txt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/lato"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawablePadding="10dp"
                        android:id="@+id/user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/email_txt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="10dp"
                        android:id="@+id/lemail"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerPw"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/password_txt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/lato"
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:max="100"
                android:maxHeight="20dp"
                android:minHeight="20dp"
                android:progress="0"
                android:progressDrawable="@drawable/progressbar"
                android:secondaryProgress="100"
                android:textSize="18dp">


            </ProgressBar>

            <TextView
                android:id="@+id/progress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />


            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="95dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/registerConfirm"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/confirm_password_txt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:fontFamily="@font/lato"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:id="@+id/confpass"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_marginTop="5dp"
                    android:drawablePadding="10dp"
                    android:drawableEnd="@drawable/ic_mood_bad_black_24dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/weakPw"
                    android:id="@+id/cPWLable"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password not matching"
                    android:layout_gravity="center_horizontal" />
            </RelativeLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="300sp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/registerbtndesign"
                android:text="@string/register_txt"
                android:textColor="#ffffff"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="156dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/already_have_an_account_txt"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.244"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>